add in ogs for testing

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 YOUTUBE_API_KEY=your_youtube_api_key
 KV_URL=your_kv_url
 KV_REST_API_URL=your_kv_rest_api_url
